# mdbook-beans

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml
assets/: beans-sidebar.css
src/: bean.rs  config.rs  kanban.rs  lib.rs  main.rs  render.rs  tasks.rs
