[package]
name = "mdbook-beans"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "An mdBook preprocessor that injects beans task data as book chapters"

[[bin]]
name = "mdbook-beans"
path = "src/main.rs"

[dependencies]
mdbook-preprocessor = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
